tests/paczka1/fuzzy1/11029821.err
Error in line 3: S973 S10 82,8
Error in line 14: S973 A80 102,1
Error in line 18: S973 S10 45,2
Error in line 32: CRibgMsR S10 28,6
